--- a/style.css
+++ b/style.css
@@ -100,6 +100,42 @@
 .feature-description{
     color: #cfcece;
 }
+/* Some fact part */
+.fact-container{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+   
+}
+
+.fact-card{
+    border: 1px solid #FF900E;
+    width: 240px;
+    height: 240px;
+    border-radius: 8px;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+}
+.fact-number{
+    font-size: 2.8rem;
+    font-weight: 600;
+    margin-top: 10px;
+    margin-bottom: 5px;
+}
+.fact-name{
+    font-size: 1.2rem;
+    font-weight: 600;
+    margin-top: 10px;
+}
+.fact-description{
+    max-width: 540px;
+}
+.some-fact{
+    font-size: 3rem;
+    margin-left: 3px;
+}
+
 
 /* Responsive site */
 
